# ask-my-note

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  README.md  components.json  cspell.json  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.e2e.json
.claude/: settings.json
.claude/agents/: architect.md  code-reviewer.md  db-designer.md  frontend-builder.md  rag-engineer.md  test-writer.md
.claude/rules/: rag.md  rust.md  typescript.md
.claude/skills/commit/: SKILL.md
.claude/skills/new-component/: SKILL.md
.claude/skills/openai-sdk/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/tauri-ipc/: SKILL.md
.github/workflows/: ci.yml
e2e/: smoke.spec.ts
e2e/pages/: app.page.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: api_key.rs  chat.rs  mod.rs  notes.rs
src-tauri/src/db/: chunks.rs  conversations.rs  messages.rs  mod.rs  notes.rs
src-tauri/src/db/migrations/: 001_create_notes.sql  002_create_chunks.sql  003_resize_vec_1024.sql  004_create_conversations.sql
src-tauri/src/models/: chunk.rs  conversation.rs  mod.rs  note.rs  provider.rs
src-tauri/src/services/: api_key.rs  chat.rs  chunker.rs  conversation.rs  embeddings.rs  indexing.rs  mod.rs  notes.rs  prompt.rs  retrieval.rs
src/components/chat/: ChatInput.tsx  ChatView.tsx  (+4 more)
src/hooks/: useAutoSave.ts  useChatStream.ts  useCodeMirror.ts
src/lib/: codemirror-theme.ts
src/stores/: appStore.ts  chatStore.ts  noteStore.ts  settingsStore.ts
(+10 files in other folders)
